Now Runs on Java 8.